--- a/src/MyProjects/MyProjects.module.css
+++ b/src/MyProjects/MyProjects.module.css
@@ -1,4 +1,22 @@
 .myProjects {
     background-color: #d8ff13;
-    width: 500px;
+    min-height: 100vh;
+}
+
+.container {
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.title {
+    background-color: lightblue;
+}
+
+.project {
+    border: 1px solid;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
 }
