add mixin and variables

--- a/src/MyProjects/MyProjects.module.scss
+++ b/src/MyProjects/MyProjects.module.scss
@@ -1,5 +1,7 @@
+@import "./../common/styles/sass/variables";
+
 .myProjects {
-  background-color: #1d1b19;
+  background-color: $bgColor;
   padding: 100px 0;
 
   .container {
