--- a/src/common/components/Title/Title.module.scss
+++ b/src/common/components/Title/Title.module.scss
@@ -1,3 +1,5 @@
+@import "./../../styles/sass/variables";
+
 .title {
   margin: 0 0 34px;
   padding-bottom: 30px;
@@ -11,7 +13,7 @@
     position: relative;
     line-height: 1.2;
     font-family: 'Jost', sans-serif;
-    color: #987750;
+    color: $primaryColor;
     font-weight: 400;
   }
 
