--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -5,34 +5,45 @@
   background-color: $bgColor;
   padding: 100px 0;
 
-  .greetingText {
-    width: 350px;
-    background-color: $bgSecondColor;
-    color: $descriptionColor;
-    @include text($fontDescription, 30px, 1.2, 400);
-  }
-
-  .myName {
-    color: $primaryColor;
-    @include text($fontPrimary, 48px, 1.2, 400);
-  }
-
-  .photo {
-    width: 350px;
-    height: 400px;
-    background-size: cover;
-    background-position: center;
+  .container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    position: relative;
 
-    &::before {
-      @include blackHover(absolute, '', black, 0, 0, 0, 0, 0.4);
+    @media screen and (min-width: 874px) {
+      justify-content: space-between;
+    }
+
+    .greetingText {
+      width: 350px;
+      background-color: $bgSecondColor;
+      color: $descriptionColor;
+      @include text($fontDescription, 30px, 1.2, 400);
+    }
+
+    .myName {
+      color: $primaryColor;
+      @include text($fontPrimary, 48px, 1.2, 400);
+    }
+
+    .photo {
+      width: 350px;
+      height: 400px;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+
+      &::before {
+        @include blackHover(absolute, '', black, 0, 0, 0, 0, 0.4);
+      }
     }
   }
 
+
 }
+
 
 
 
