add About me component

--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -4,6 +4,7 @@
 .footerBlock {
   background-color: $bgColor;
   padding: 100px 0 0 0;
+  width: 56%;
 
   .container {
     flex-direction: column;
