--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
+/*.App {*/
+/*    width: 100%;*/
+/*    float: left;*/
+/*    clear: both;*/
+/*    min-height: 100vh;*/
+/*    position: relative;*/
+/*    overflow: hidden;*/
+/*}*/
+
 
