--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -3,49 +3,93 @@
 
 .mainBlock {
   background-color: $bgColor;
-  padding: 100px 0;
+  width: 44%;
+  min-height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
 
   .container {
-    display: flex;
-    justify-content: center;
+    //display: flex;
+    //justify-content: center;
 
-    @media screen and (min-width: 874px) {
-      justify-content: space-between;
-    }
+    //@media screen and (min-width: 874px) {
+    //  justify-content: space-between;
+    //}
 
-    .greetingText {
-      width: 350px;
-      background-color: $bgSecondColor;
-      color: $descriptionColor;
-      @include text($fontDescription, 30px, 1.2, 400);
-    }
-
-    .myName {
-      color: $primaryColor;
-      @include text($fontPrimary, 48px, 1.2, 400);
-    }
-
-    .photo {
-      width: 350px;
-      height: 400px;
-      background-size: cover;
-      background-position: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .photoContainer {
+      padding: 38px 41px;
       position: relative;
+      height: 500px;
+      margin-bottom: 30px;
+      z-index: 5;
 
-      &::before {
-        @include blackHover(absolute, '', black, 0, 0, 0, 0, 0.4);
+      .border1 {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        bottom: 20px;
+        right: 0;
+        top: 20px;
+        border: 1px solid rgba(255, 255, 255, .2);
+        border-radius: 2px;
+        transition: all .3s ease;
       }
+
+      .border2 {
+        position: absolute;
+        z-index: 1;
+        left: 20px;
+        bottom: 0;
+        right: 20px;
+        top: 0;
+        border: 1px solid rgba(255, 255, 255, .2);
+        border-radius: 2px;
+        transition: all .3s ease;
+      }
+
+      .mainPhotoBlock {
+        position: relative;
+        z-index: 2;
+        height: 400px;
+
+        .photo {
+          z-index: 1;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          top: 0;
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          position: absolute;
+
+          &::before {
+            @include blackHover(absolute, '', black, 0, 0, 0, 0, 0.4);
+          }
+        }
+      }
+
+      .greetingText {
+        width: 350px;
+        text-align: center;
+        background-color: $bgSecondColor;
+        color: $descriptionColor;
+        @include text($fontDescription, 18px, 1.2, 400);
+      }
+
+      .myName {
+        color: $primaryColor;
+        @include text($fontPrimary, 30px, 1.2, 400);
+      }
+
+
     }
   }
 
 
 }
-
-
-
 
 
 
