--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -6,5 +6,5 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
