--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,5 +1,6 @@
 $primaryColor: #987750;
 $descriptionColor: #888888;
+$description2Color: #DDDDDD;
 $bgColor: #1d1b19;
 $bgSecondColor: #181715;
 $fontPrimary: Jost, sans-serif;
