--- a/src/common/components/Title/Title.module.scss
+++ b/src/common/components/Title/Title.module.scss
@@ -1,40 +1,40 @@
 @import "./../../styles/sass/variables";
 @import "./../../styles/sass/mixins";
 
-.title {
-  margin: 0 0 34px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  & h2 {
-    margin: 0;
-    font-size: 18px;
-    letter-spacing: 0;
-    text-transform: capitalize;
-    position: relative;
-    line-height: 1.2;
-    font-family: Jost, sans-serif;
+.main {
+  .subtitle{
+    margin: 0 0 54px 0;
+    padding: 0;
+    text-transform: uppercase;
+    letter-spacing: 1px;
     color: $primaryColor;
-    font-weight: 400;
+    @include text($fontPrimary, 18px, 1.2, 500)
   }
+  .title {
+    margin: 0 0 34px 0;
+    padding: 0 0 15px 0;
+    letter-spacing: 0;
+    position: relative;
+    color: $description2Color;
+    @include text($fontPrimary, 48px, 1.2, 400);
 
-  & h3 {
-    color: #dddddd;
-    @include text($fontPrimary, 48px, 1.2, 400)
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      height: 2px;
+      background-color: rgba(255, 255, 255, .2);
+      width: 150px;
+      left: 0;
+    }
   }
-
-  &::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    height: 2px;
-    background-color: rgba(255, 255, 255, .2);
-    width: 150px;
-    left: 0;
+  .description {
+    margin: 0 0 57px 0;
+    padding: 0;
+    letter-spacing: 0;
+    color: $descriptionColor;
+    @include text($fontDescription, 30px, 44px, 400);
   }
 }
-
 
 
