rollback to old version, complete footer

--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -31,7 +31,9 @@
       .social {
         width: 50px;
         height: 50px;
-        background-color: #ac6a1b;
+        background-color: white;
+        background-size: cover;
+        background-position: center;
       }
     }
 
