--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -19,8 +19,8 @@
     }
 
     .socialContainer {
-      border: 1px solid;
-      background-color: #7f88ff;
+      //border: 1px solid;
+      //background-color: #7f88ff;
       width: 250px;
       display: flex;
       justify-content: space-between;
@@ -30,7 +30,8 @@
       .social {
         width: 50px;
         height: 50px;
-        background-color: #ac6a1b;
+        background-size: cover;
+        background-position: center;
       }
     }
 
