--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -4,7 +4,6 @@
 .footerBlock {
   background-color: $bgColor;
   padding: 100px 0 0 0;
-  width: 56%;
 
   .container {
     flex-direction: column;
@@ -20,8 +19,8 @@
     }
 
     .socialContainer {
-      border: 1px solid;
-      background-color: #7f88ff;
+      //border: 1px solid;
+      //background-color: #7f88ff;
       width: 250px;
       display: flex;
       justify-content: space-between;
@@ -31,7 +30,6 @@
       .social {
         width: 50px;
         height: 50px;
-        background-color: white;
         background-size: cover;
         background-position: center;
       }
