--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -4,6 +4,8 @@
 .footerBlock {
   background-color: $bgColor;
   padding: 100px 0 0 0;
+  position: relative;
+  z-index: 3;
 
   .container {
     flex-direction: column;
@@ -19,8 +21,6 @@
     }
 
     .socialContainer {
-      //border: 1px solid;
-      //background-color: #7f88ff;
       width: 250px;
       display: flex;
       justify-content: space-between;
