--- a/src/MyProjects/MyProjects.module.scss
+++ b/src/MyProjects/MyProjects.module.scss
@@ -1,175 +1,26 @@
 @import "./../common/styles/sass/variables";
 
 .myProjects {
-  background-color: #1d1b19;
+  background-color: $bgColor;
   padding: 100px 0;
-  width: 65%;
+  position: relative;
+  z-index: 3;
 
   .container {
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
 
-    .titleBox {
-      margin-bottom: 70px;
-      padding-right: 100px;
-      position: relative;
-
-      .navigation {
-        position: absolute;
-        right: 0;
-        display: flex;
-        bottom: 30px;
-        z-index: 5;
-
-        .prev {
-          width: 26px;
-          height: 21px;
-          display: block;
-          text-decoration: none;
-          position: relative;
-
-          & span {
-            display: block;
-            background-color: #888;
-            width: 26px;
-            height: 1px;
-            position: absolute;
-            top: 50%;
-            //transition: all .3s ease;
-
-            &::before {
-              display: block;
-              background-color: inherit;
-              width: 14px;
-              height: 1px;
-              content: '';
-              position: absolute;
-              left: -1px;
-              transform: rotate(-45deg);
-              bottom: 100%;
-              margin-bottom: 4px;
-            }
-
-            &::after {
-              display: block;
-              background-color: inherit;
-              width: 14px;
-              height: 1px;
-              content: '';
-              position: absolute;
-              left: -1px;
-              transform: rotate(45deg);
-              top: 100%;
-              margin-top: 4px;
-            }
-          }
-
-          &::after {
-            content: '';
-            position: absolute;
-            left: -10px;
-            right: -10px;
-            bottom: -10px;
-            top: -10px;
-            background-color: transparent;
-            transition: all .3s ease;
-            border: 1px solid transparent;
-          }
-        }
-
-        .next {
-          margin-left: 30px;
-          width: 26px;
-          height: 21px;
-          display: block;
-          text-decoration: none;
-          position: relative;
-
-          & span {
-            display: block;
-            background-color: #888;
-            width: 26px;
-            height: 1px;
-            position: absolute;
-            top: 50%;
-            transition: all .3s ease;
-
-            &::before {
-              display: block;
-              background-color: inherit;
-              width: 14px;
-              height: 1px;
-              content: '';
-              position: absolute;
-              transform: rotate(-45deg);
-              right: -1px;
-              left: auto;
-              top: 100%;
-              margin-top: 4px;
-            }
-
-            &::after {
-              top: auto;
-              margin-top: inherit;
-              right: -1px;
-              left: auto;
-              bottom: 100%;
-              margin-bottom: 4px;
-              display: block;
-              background-color: inherit;
-              width: 14px;
-              height: 1px;
-              content: '';
-              position: absolute;
-              transform: rotate(45deg);
-            }
-          }
-
-          &::after {
-            content: '';
-            position: absolute;
-            left: -10px;
-            right: -10px;
-            bottom: -10px;
-            top: -10px;
-            background-color: transparent;
-            transition: all .3s ease;
-            border: 1px solid transparent;
-          }
-        }
-
-      }
-    }
-
-    .projects {
-      padding-right: 0;
-
-      .projectItems {
-        display: flex;
-
-        .items {
-          position: relative;
-          overflow: hidden;
-          display: flex;
-          //-webkit-transform: translate3d(0,0,0);
-        }
-        .img {
-          height: 280px;
-          width: 370px;
-          margin-right: 10px;
-        }
+    .project {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-top: 30px;
+      align-items: flex-start;
+      @media screen and (min-width: 799px) {
+        justify-content: space-between;
       }
     }
   }
 }
-
-
-//.project {
-//  width: 100%;
-//  display: flex;
-//  justify-content: center;
-//  flex-wrap: wrap;
-//  margin-top: 30px;
-//  align-items: flex-start;
-//  @media screen and (min-width: 799px) {
-//    justify-content: space-between;
-//  }
-//}
