--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -1,10 +1,9 @@
 .container {
-    margin: 0 55px;
+    margin: 0 auto;
     width: 80%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    /*border: 1px solid red;*/
 }
