--- a/src/RemoteWork/RemoteWork.module.scss
+++ b/src/RemoteWork/RemoteWork.module.scss
@@ -2,8 +2,8 @@
 @import "../common/styles/sass/mixins";
 
 .remoteWork {
+  padding: 100px 0;
   background-color: $bgColor;
-  min-height: 50vh;
   position: relative;
   z-index: 3;
 
