--- a/src/MyProjects/Projects/Project.module.scss
+++ b/src/MyProjects/Projects/Project.module.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-left: 10px;
 
   .imgContainer {
     width: 100%;
