--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -3,17 +3,16 @@
 
 .skill {
   width: 250px;
-  background-color: $bgSecondColor;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-bottom: 5px;
+  margin-left: 10px;
+  margin-bottom: 10px;
 
   .icon {
     width: 80px;
     height: 80px;
-    background-color: #0ed5ff;
     background-size: cover;
     background-position: center;
     display: flex;
